# linear-types

./: .dockerignore  .gitignore  .gitmodules  .jenkins_script.sh  .travis.yml  Artifact_HOWTO_Guide.html  Dockerfile  Examples.cabal  FormalSystem.lhs  FormalSystem.tex  HaskeLL.lhs  Makefile  Motivation.org  Notes  Notes.org  README.md  ROADMAP.md  applications.lhs  inference.lhs  intro.lhs  intro.tex  lionear.lhs  local.bib  mathpartir.sty  minicore.lhs  minicore.tex  run_all_cursor_benches.sh  shell.nix  slides.org  stack.yaml  system.lhs  why.lhs
Examples/: .gitignore  ByteArrays.hs  Cursors.hs  DEVLOG.md  Examples.cabal  HaskellR.hs  InPlaceArrays.hs  Makefile  Network.hs  Protocol.hs  PtrArray.hs  StorageServer.hs  Streams.hs  Streams.lhs  go_bench.sh  run_all_cursor_benches.sh  stack.yaml
Examples/Queues/: QueueRefImpl.hs
Examples/bench/: Main.hs
Examples/plots/: .gitignore  Makefile  swarm_benchmark01.csv  template.gpl  template_keyhigh.gpl  template_keylow.gpl
Examples/src/: ByteArray.hs  Cursors.hs  FreezeArray.hs  IO.hs  Monads.hs  PackedTree.hs  Purify.hs  Socket.hs  SocketExample.hs
Examples/src/Cursors/: Mutable.hs  PureStorable.hs  ST.hs  UnboxedHas.hs
Examples/src/Linear/: Common.hs  Std.hs  Unsafe.hs
Examples/src/PackedTree/: Unsafe.hs
Examples/src/Socket/: Generic.hs
Examples/tentative/: ArrayST.hs  ArraysIO.hs  Monads.hs  PtrArray.hs
Examples/test/: ByteArraySpec.hs  CursorPureSpec.hs  Main.hs  test.hs
ICFP2017/: Makefile  hlt.lhs  hlt.tex  old-intro.lhs  shell.nix
MeetingNotes/: 2016_10_27.txt  2016_11_17.md  2016_12_08.md  2016_12_15.md  2017_01_05.md  2017_01_12.md  2017_01_19.md  2017_02_02.md
POPL2018/: Makefile  acmart.cls  comment.cut  hlt.lhs  reviews-todo.txt  shell.nix  supplementary-readme.md
Proposals/: borrowing_as_syntactic_sugar.md  linear-haskell-proposal-faq.org
Slides/2017-01-10-IRIF/: abstract  spiwack.lhs
Slides/2017-03-10-LIPN/: spiwack.lhs
Tests/: test.hs
bench/: Main.hs
benchmarks/: README.md  analyze.py  run_benches.sh  shell.nix
benchmarks/c/: queues.c  queues.h
benchmarks/haskell/: queue.cabal  queues.hs  stack.yaml
benchmarks/haskell/app/: Main.hs
benchmarks/haskell/src/: CQueue.hs  Queue.hs
code_examples/: Queue1.hs  QueueRefImpl.hs
packaging/: preseed.cfg  provision.sh  vbox.json
plots/: Dockerfile  Makefile  README.md  default_dataset.csv  renames.txt  swarm_benchmark03.csv  template_keyhigh.gpl
src/: ByteArray.hs  FreezeArray.hs  IO.hs  PackedTree.hs  Purify.hs  Socket.hs  SocketExample.hs
src/Cursors/: Mutable.hs  PureBinary.hs  PureStorable.hs  ST.hs  UnboxedHas.hs
src/Linear/: Common.hs  Std.hs  Unsafe.hs
src/PackedTree/: Unsafe.hs
src/Socket/: Generic.hs  IO.hs
tentative/: ByteArrays.hs  Protocol.hs
test/: ByteArraySpec.hs  Main.hs  PackedTreeSpec.hs  PurifySpec.hs
