
synopsis:            Examples implemented using Linear types in Haskell.
description:         Examples corresponding to those in the POPL'18 Linear Haskell submission.
name:                Examples
version:             0.1.0.0
author:              Ryan Newton
maintainer:          rrnewton@gmail.com
build-type:          Simple
cabal-version:       >=1.10

flag pure
  default: False
                     
library
  hs-source-dirs:     src
  exposed-modules:
        -- Section 5.1 of the paper:
        Cursors.UnboxedHas,
        Cursors.Mutable,
        Cursors.PureBinary,
        Cursors.PureStorable,
        Cursors.ST,

        IO,
        Purify,
        Socket,
        Socket.Generic,
        SocketExample,

        -- Common utilities:
        ByteArray,
        Linear.Std,
        Linear.Unsafe,

        -- Exposed only for testing:
        PackedTree
        PackedTree.Unsafe
           
  other-modules:
        Linear.Common

  other-extensions:    TypeOperators, GADTs, DataKinds, KindSignatures,
                       BangPatterns, LambdaCase, CPP
  build-depends:       base >=4.9,
                       bytestring >=0.10,
                       binary,
                       containers,
                       ghc-prim,
                       deepseq,
                       socket
  default-language:    Haskell2010
  -- Bring disabled warnings back later:
  ghc-options:  -Wall -fno-warn-unused-top-binds -fno-warn-unused-imports -Wno-deprecations -fno-warn-orphans -fno-warn-name-shadowing -O2 -funbox-strict-fields

  if flag(pure)
    cpp-options: -DPUREMODE


-- Internal testing.
test-suite test-Examples
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options:         -Wall -Wno-deprecations -fno-warn-orphans -fno-warn-name-shadowing
  other-extensions: CPP
  main-is: Main.hs
  if flag(pure)
    cpp-options: -DPUREMODE
  other-modules:       ByteArraySpec,
                       PackedTreeSpec,
                       PurifySpec
  build-depends:
          base
        , bytestring >=0.10
        , Examples
        , hspec
        , QuickCheck
  default-language:    Haskell2010


 -- The benchmark corresponding to section 5.1 of the paper (figure 7).
executable bench-cursor
  hs-source-dirs:      bench
  main-is:             Main.hs
  ghc-options:         -Wall -Wno-deprecations -O2 -threaded -rtsopts -funbox-strict-fields -with-rtsopts=-T
  build-depends:       base
                     , Examples
                     , time
                     , deepseq
                     , bytestring
--                     , criterion
  default-language:    Haskell2010

