name:                queue
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/queue#readme
license:             BSD3
license-file:        LICENSE
author:              Felix Raimundo
maintainer:          felix.raimundo@tweag.io
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Queue
                     , CQueue
  build-depends:       base >= 4.7 && < 5
                     , deepseq
  default-language:    Haskell2010

executable queue-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hyperion
                     , queue
  default-language:    Haskell2010

test-suite queue-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , queue
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/queue
